--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.valid {
+  color: blue;
+}
+
+.invalid {
+  color: red;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
