--- a/src/buglist/BugInfo.module.css
+++ b/src/buglist/BugInfo.module.css
@@ -6,3 +6,9 @@
   margin: 1rem 0;
   border-radius: 5px;
 }
+
+.deleteButton {
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+}
