--- a/src/buglist/BugInfo.module.css
+++ b/src/buglist/BugInfo.module.css
@@ -3,12 +3,18 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
-  margin: 1rem 0;
+  margin: 5px 0;
   border-radius: 5px;
+  box-shadow: 1px 1px 15px 0px rgba(188, 189, 202, 0.75);
 }
 
 .deleteButton {
   border: none;
   background-color: inherit;
   cursor: pointer;
+  margin-left: 15px;
+}
+
+.bugtitle {
+  flex-grow: 1;
 }
