--- a/src/ui/Header.css
+++ b/src/ui/Header.css
@@ -4,7 +4,7 @@
     background-color: #02024f;
     color: rgb(255, 255, 255);
     margin: 0 auto 0 auto;
-    padding: 1rem 0;
+    padding: auto 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     top: 0px;
     width: 100%;
@@ -12,5 +12,5 @@
   
   .header h1 {
     text-shadow: 4px 3px 0 #7a7a7a;
-    margin: 0 auto 0;
+    margin: 1rem auto;
   }
